--- a/templates/menu.html
+++ b/templates/menu.html
@@ -10,15 +10,16 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="{% static '/styles/style.css' %}">
+  <script src="{% static 'js-scripts/main.js' %}"></script>
+  <link rel="stylesheet" href="{% static 'styles/style.css' %}">
   <style>
     body {
-      background-color: #1a1a1a;
-      color: #ffffff;
+      background-color: #e6e3e3; /* Alteração da cor de fundo */
+      color: #000000; /* Alteração da cor do texto */
     }
 
-    .navbar {
-      background-color: #292929 !important;
+    nav {
+      background-color: #292929; /* Alteração da cor do navbar */
     }
 
     .navbar-brand {
@@ -97,10 +98,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" href="#">Shopee</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Amazon</a>
+          <a class="nav-link" href="{% url 'menu' %}">Página inicial</a> <!-- Alteração do link -->
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Estoque</a>
@@ -111,15 +109,31 @@
         <li class="nav-item">
           <a class="nav-link" href="#">Saída</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'shopee' %}">Shopee</a> <!-- Alteração do link -->
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Amazon</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="adminDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Admin
+          </a>
+          <div class="dropdown-menu" aria-labelledby="adminDropdown">
+            <a class="dropdown-item" href="#">Usuários</a>
+            <a class="dropdown-item" href="#">Log de Auditoria</a>
+            <a class="dropdown-item" href="#">Grupos</a>
+          </div>
+        </li>
       </ul>
       <ul class="navbar-nav">
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Opções
+            Perfil
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="#" data-toggle="modal" data-target="#modalPassword">Mudar Senha</a>
-            <a class="dropdown-item" href="#" onclick="logout()">Deslogar</a>
+            <a class="dropdown-item" href="#" onclick="logout()">Sair</a>
           </div>
         </li>
       </ul>
@@ -158,19 +172,5 @@
       </div>
     </div>
   </div>
-
-  <script>
-    function changePassword() {
-      // Lógica para alterar a senha
-      console.log('Senha alterada com sucesso!');
-      $('#modalPassword').modal('hide'); // Fechar o modal após a alteração
-    }
-
-    function logout() {
-      // Lógica para fazer logout
-      console.log('Usuário deslogado!');
-      // Redirecionar para a página de login, por exemplo
-    }
-  </script>
 </body>
 </html>
