Alterações Feitas, adicionado protótipo da tabela da versão final, e css adicionado

--- a/templates/menu.html
+++ b/templates/menu.html
@@ -12,81 +12,8 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script src="{% static 'js-scripts/main.js' %}"></script>
   <link rel="stylesheet" href="{% static 'styles/style.css' %}">
-  <style>
-    body {
-      background-color: #e6e3e3; /* Alteração da cor de fundo */
-      color: #000000; /* Alteração da cor do texto */
-    }
-
-    nav {
-      background-color: #292929; /* Alteração da cor do navbar */
-    }
-
-    .navbar-brand {
-      color: #ffffff !important;
-      font-weight: bold;
-      font-size: 20px;
-    }
-
-    .navbar-nav .nav-link {
-      color: #ffffff !important;
-      font-weight: bold;
-      font-size: 18px;
-      padding: 15px;
-      text-transform: uppercase;
-    }
-
-    .navbar-nav .nav-link:hover {
-      color: #00BFFF !important;
-    }
-
-    .dropdown-menu {
-      background-color: #292929;
-    }
-
-    .dropdown-menu .dropdown-item {
-      color: #ffffff !important;
-      font-weight: bold;
-    }
-
-    .dropdown-menu .dropdown-item:hover {
-      background-color: #008080;
-    }
-
-    .modal-content {
-      background-color: #292929;
-      color: #ffffff;
-    }
-
-    .modal-header {
-      border-bottom: 1px solid #ffffff;
-    }
-
-    .modal-title {
-      color: #ffffff;
-      font-weight: bold;
-    }
-
-    .modal-footer .btn-secondary {
-      background-color: #008080;
-      border-color: #008080;
-    }
-
-    .modal-footer .btn-secondary:hover {
-      background-color: #005656;
-      border-color: #005656;
-    }
-
-    .modal-footer .btn-primary {
-      background-color: #ff4500;
-      border-color: #ff4500;
-    }
-
-    .modal-footer .btn-primary:hover {
-      background-color: #cc3700;
-      border-color: #cc3700;
-    }
-  </style>
+  <link rel="stylesheet" href="{% static 'menu.css' %}">
+    
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
