--- a/templates/shopee.html
+++ b/templates/shopee.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shopee</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="{% static 'styles/style.css' %}">
     <link rel="stylesheet" href="{% static 'css/menu.css' %}">
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
     <link rel="stylesheet" href="{% static 'css/button.css' %}">
@@ -65,14 +64,14 @@
                 Perfil
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#" data-toggle="modal" data-target="#modalPassword">Mudar Senha</a>
                 <a class="dropdown-item" href="#" onclick="logout()">Sair</a>
+                <a class="dropdown-item" href="#" data-toggle="modal" data-target="#modalPassword">Mudar Senha</a>
               </div>
             </li>
           </ul>
         </div>
       </nav>
-    
+
       <div class="modal fade" id="modalPassword" tabindex="-1" role="dialog" aria-labelledby="modalPasswordLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
           <div class="modal-content">
@@ -99,169 +98,72 @@
               </form>
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
               <button type="button" class="btn btn-primary" onclick="changePassword()">Salvar</button>
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
             </div>
           </div>
         </div>
       </div>
-
-      
-
-<div class="modal fade" id="modalPassword" tabindex="-1" role="dialog" aria-labelledby="modalPasswordLabel"
-     aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="modalPasswordLabel">Mudar Senha</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <form>
-                    <div class="form-group">
-                        <label for="oldPassword">Senha Antiga</label>
-                        <input type="password" class="form-control" id="oldPassword">
-                    </div>
-                    <div class="form-group">
-                        <label for="newPassword">Nova Senha</label>
-                        <input type="password" class="form-control" id="newPassword">
-                    </div>
-                    <div class="form-group">
-                        <label for="confirmPassword">Confirmar Nova Senha</label>
-                        <input type="password" class="form-control" id="confirmPassword">
-                    </div>
-                </form>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
-                <button type="button" class="btn btn-primary" onclick="changePassword()">Salvar</button>
-            </div>
-        </div>
-    </div>
-</div>
-
-<main>
-
-    <button type="button" class="button blue mobile" id="cadastrarProduto">Cadastrar Produto</button>
-    <table id="product-table" class="records">
-        <thead>
-          <tr>
-              <th>Produto</th>
-              <th>Custo</th>
-              <th>Custo 10%</th>
-              <th>Custo 15%</th>
-              <th>Preço Simples</th>
-              <th>Preço Ideal</th>
-              <th>Preço Sendo Vendido</th>
-              <th>Sobra</th>
-              <th>Contribuição</th>
-            </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td> </td>
-            <td> </td>
-            <td> </td>
-            <td> </td>
-            <td> </td>
-            <td> </td>
-            <td> </td>
-            <td> </td>
-            <td> </td>
-            <td>
-              <button type="button" class="button green">editar</button>
-              <button type="button" class="button red">excluir</button>
-            </td>
-          </tr>
-        </tbody>
-    </table>
-            
     
-    <div class="modal" id="modal">
-        <div class="modal-content">
-            <header class="modal-header">
-                <h2>Novo Produto</h2>
-                <span class="modal-close" id="modalClose">&#10006;</span>
-            </header>
-            <form class="modal-form">
-                <select class="modal-field" id="produto" placeholder="Produto">
-                    <option value="" selected disabled>Selecione o Produto</option>
-                </select>
-                
-                <select class="modal-field" id="preco-custo" placeholder="Preço de Custo">
-                    <option value="" selected disabled>Selecione o Preço de Custo</option>
-                </select>
-                <input type="text" pattern="[0-9]+([,\.][0-9]+)?" class="modal-field" placeholder="Preço sendo vendido">
-            </form>
-            <footer class="modal-footer">
-                <button class="button green">Salvar</button>
-                <button class="button red">Cancelar</button>
-            </footer>
-        </div>
-    </div>
-</main>
+  <main>
 
-
-<div class="modal fade" id="modalAddProduct" tabindex="-1" role="dialog" aria-labelledby="modalAddProductLabel"
-     aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="modalAddProductLabel">Adicionar Produto</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+      <button type="button" class="button blue mobile" data-toggle="modal" data-target="#cadastrarProduto">Cadastrar Produto</button>
+      <table class="records">
+          <thead>
+            <tr>
+                <th>Produto</th>
+                <th>Custo</th>
+                <th>Custo 10%</th>
+                <th>Custo 15%</th>
+                <th>Preço Simples</th>
+                <th>Preço Ideal</th>
+                <th>Preço Sendo Vendido</th>
+                <th>Sobra</th>
+                <th>Contribuição</th>
+              </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td> </td>
+              <td> </td>
+              <td> </td>
+              <td> </td>
+              <td> </td>
+              <td> </td>
+              <td> </td>
+              <td> </td>
+              <td> </td>
+              <td>
+                <button type="button" class="button green">editar</button>
+                <button type="button" class="button red">excluir</button>
+              </td>
+            </tr>
+          </tbody>
+      </table>
+              
+      
+      <div class="modal fade" id="cadastrarProduto" tabindex="-1" role="dialog" aria-labelledby="modalCadastrarProdutoLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <header class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <form>
-                    <div class="form-group">
-                        <label for="estoque">Estoque</label>
-                        <select class="form-control" id="estoque">
-                            <!-- Opções do estoque -->
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label for="custo">Custo</label>
-                        <input type="text" class="form-control" id="custo" readonly>
-                    </div>
-                    <div class="form-group">
-                        <label for="preco-simples">Preço Simples</label>
-                        <input type="text" class="form-control" id="preco-simples">
-                    </div>
-                    <div class="form-group">
-                        <label for="preco-ideal">Preço Ideal</label>
-                        <input type="text" class="form-control" id="preco-ideal">
-                    </div>
-                    <!-- Outros campos de adição de produto -->
+                  </button>
+                </header>
+                <form class="modal-form">
+                    <input type="text" class="modal-field" placeholder="Produto">
+                    <input type="email" class="modal-field" placeholder="Preço de Custo">
+                    <input type="text" class="modal-field" placeholder="Preço sendo Vendido">
                 </form>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
-                <button type="button" class="btn btn-primary">Salvar</button>
+                <footer class="modal-footer">
+                    <button class="button green">Salvar</button>
+                    <button type="button" class="button red" data-dismiss="modal">Fechar</button>
+                </footer>
             </div>
         </div>
-    </div>
-</div>
+      </div>
 
-<script>
-document.addEventListener('DOMContentLoaded', function () {
-  // Configuração da grade
-  var gridOptions = {
-      pagination: true, // Ativar paginação
-      paginationPageSize: 5, // Número de registros por página
-      domLayout: 'autoHeight' // Layout automático de altura da grade
-  };
-
-  // Selecionar a tabela HTML existente
-  var table = document.querySelector('#product-table');
-
-  // Inicializar a grade com a tabela HTML existente
-  new agGrid.Grid(table, gridOptions);
-});
-
-</script>
+  </main>
 
 </body>
 </html>
